--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,9 @@
     -->
     <!-- Latest compiled and minified CSS -->
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"> -->
+    <link rel="icon" href="/images/title-logo.ico" type="image/x-icon" >
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"/>
-    <title>React App</title>
+    <title>SEIZEE</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
